# p7-follow-person-ireneegv

camera/: CMakeLists.txt  package.xml
camera/config/: params.yaml
camera/include/camera/: DetectionTo3DfromPCNode.hpp  HSVFilterNode.hpp
camera/launch/: PCloud.launch.py  depth.launch.py  yolo_detection.launch.py
camera/src/: hsv_filter_main.cpp
camera/src/camera/: DetectionTo3DfromDepthNode.cpp  HSVFilterNode.cpp
laser/: CMakeLists.txt  package.xml
laser/include/laser/: ObstacleDetectorNode.hpp
laser/launch/: laser.launch.py
laser/src/laser/: ObstacleDetectorNode.cpp
main/: CMakeLists.txt  package.xml
main/include/p6/: PIDController.hpp  TfPublisher.hpp
main/src/: main.cpp
main/src/p6/: PIDController.cpp  TfPublisher.cpp
